maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:7: error: value update is not a member of Int
    	random3() = i 
        ^