maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    var i = 0
    
    while (!estSurBiscuit)
    {
    	random3() = i 
    	
    	if (i == 0 && !estFaceMur)
    	{
    		avance
    	}
    	else if (i == 1)
    	{
    		droite
    	}
    	else gauche;
    	
    }
}
